--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,82 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+/* Barre de navigation */
+.navbar {
+    background-color: #fff;
+    color: #2d3436;
+    border-bottom: 1px solid rgba(255,255,255,.3);
+    box-shadow: 0px .3rem .9rem rgba(0,0,0, .4);
+    width: 100%;
+    height: 5rem;
+    font-size: 1.1rem;
+    padding: 0 1.8rem;
+    line-height: 5rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+}
+.navbar a {
+    text-decoration: none;
+    color: #2d3436;
+}
+.navbar a.navbar__logo {
+    color: #0984e3;
+    letter-spacing: .3rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    padding: 0 1.8rem;
+    line-height: inherit;
+    float: left;
+    height: inherit;
+}
+.navbar a.navbar__logo span{
+    font-size: 1.7rem;
+    font-weight: 600;
+}
+.navbar ul {
+    list-style: none;
+    height: inherit;
+    line-height: inherit;
+    padding: 0 3rem;
+    float: right;
+}
+.navbar ul li{
+    display: inline-block;
+}
+.navbar ul li a {
+    font-size: 1rem;
+    padding: 0 1.8rem;
+    text-align: center;
+    display: block;
+    min-width: 7.5rem;
+}
+.navbar ul li a:hover {
+    color: #0984e3;
+}
+.cta__button{
+    background-color: #0984e3;
+}
+.cta__button a {
+    color: #fff;
+    font-size: 1.3rem;
+    font-weight: 500;
+    letter-spacing: .2rem;
+}
+.navbar ul li:nth-child(5) a:hover {
+    background-color: rgba(255,255,255,.2);
+    color: #fff;
+    font-size: 1.1rem;
+    transition: .3s ease-in;
+}
+.navbar .navbar-toggler {
+    display: none;
+}
+/* Section Accueil | Home */
+.home__section{
+    width: 100%;
+    height: 100vh;
+    background: url('../images/email-pattern.png') repeat;
+}
