--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ body{
     font-size: 1.1rem;
     transition: .3s ease-in;
 }
-.navbar .navbar-toggler {
+.navbar .navbar__toggler {
     display: none;
 }
 /* Section Accueil | Home */
@@ -86,4 +86,125 @@ body{
     width: 100%;
     height: 100vh;
     background: url('../images/email-pattern.png') repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    text-align: center;
+}
+.home__section h1 {
+    font-size: 5rem;
+    color: #636e72;
+}
+.home__section h1 span {
+    color: #0984e3;
+}
+
+/* Media Queries | Pour les ecrans de moins de 991px de largeur */
+@media screen and (max-width: 991px){
+    .navbar a.navbar__logo {
+        color: #0984e3;
+        padding: 0rem;
+        margin-top: 0rem;
+    }
+    .navbar ul {
+        padding: 0 .6rem;
+    }
+    .navbar ul li a {
+        min-width: 6.25rem;
+        padding: 0 1.2rem;
+    }
+    .navbar ul li a:hover{
+        background-color: rgba(255,255,255,.2);
+        color: #fff;
+        font-size: 1.1rem;
+    }
+}
+
+/* Pour les ecrans des smartphones et tablettes */
+@media screen and (max-width: 768px){
+    .home__section h1 {
+
+        
+        font-size: 3rem;
+        color: #636e72;
+    }
+    .navbar {
+        padding: 1rem;
+    }
+    .navbar ul {
+        width: 100%;
+        padding: 0rem;
+        background-color: #636e72;
+        opacity: .9;
+        height: 50vh;
+        max-height: 0;
+        overflow: hidden;
+        transition: all ease-in-out 0.3s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .navbar ul.open{
+        max-height: 100vh;
+    }
+    .navbar ul li {
+        width: 80%;
+    }
+    .navbar ul li:nth-child(5) a:hover {
+        background-color: rgba(255,255,255,0.15);
+        color: #fff;
+        font-size: 1.1rem;
+
+      }
+      .navbar a.navbar__logo{
+        color: #0984e3;
+        margin-top: -1rem;
+    }
+    .navbar ul li a {
+        padding: 0rem;
+        color: #fff;
+        text-shadow:  0 4px 10px rgba(0,0,0, .7);
+        text-transform: capitalize;
+    }
+    .navbar .navbar__toggler{
+        display: block;
+        position: absolute;
+        height: 2.5rem;
+        top: 1.2rem;
+        right: 1.2rem;
+        background-color: transparent;
+        color: #fff;
+        border: 3px solid #fff;
+        padding: 0 .3rem;
+        cursor: pointer;
+        outline: none;
+    }
+    .navbar .navbar__toggler span,
+    .navbar .navbar__toggler span::before,
+    .navbar .navbar__toggler span::after {
+
+        display: block;
+        content:'';
+        background-color: #2d3436;
+        height: .2rem;
+        width: 1.7rem;
+        border-radius: 4px;
+        transition: all ease-in-out 0.3s;
+    }
+    .navbar .navbar__toggler span::before{
+        transform: translateY(-8px);
+    }
+    .navbar .navbar__toggler span::after {
+        transform: translateY(5px);
+    }
+    .navbar .navbar__toggler.open__hamburger span {
+        background-color: transparent;
+    }
+    .navbar .navbar__toggler.open-navbar__toggler span::before {
+        transform: translateY(0px) rotate(45deg);
+    }
+    .navbar .navbar__toggler.open-navbar__toggler span::after {
+        transform: translateY(-3px) rotate(-45deg);
+    }
 }
